--- a/to-do.html
+++ b/to-do.html
@@ -55,7 +55,7 @@
         lii.appendChild(divr);
         list.appendChild(lii);
         var br1 = document.createElement("br");
-        lii.appendChild(br1);
+        // lii.appendChild(br1);
       }
     </script>
   </body>
